<resources>

    <!--Main Strings-->
    <string name="app_name">About_Me</string>


    <!--MyAccount Strings-->
    <string name="name">Name</string>
    <string name="my_name">Artur</string>
    <string name="sir_name">Surname</string>
    <string name="my_sir_name">Elzhanov</string>
    <string name="last_name">Last name</string>
    <string name="my_last_name">Muratovich</string>
    <string name="e_mail">Mail address</string>
    <string name="my_e_mail">senpai@mail.ru</string>
    <string name="profSkills">Professional skills</string>
    <string name="show_skills">Press S to add skills</string>

    <!--Button strings-->
    <string name="button_text">S</string>

    <!--Menu strings-->
    <string name="edit_profile">Edit profile</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="share_profile">Share profile</string>

    <!--Popap strings-->
    <string name="show_more">Show all</string>
    <string name="add_info">Add info</string>
    <string name="send_email">Send message</string>
    <string name="add_mail">Add email </string>
    <string name="show_time">Show time</string>
    <string name="edit_account">Edit Account</string>


    <!--Dialog strings-->
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <!--Second activity strings-->
    <string name="ok">OK</string>
    <string name="_8987_80">8987...80</string>
    <string name="phone_num">Phone num</string>
    <string name="_23_12_1984">23.12.1984</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="kazan_technological_univercity">Kazan Technological Univercity</string>
    <string name="education">Education</string>
    <string name="martial_arts">Martial Arts</string>
    <string name="hobby">Hobby</string>
    <string name="status">Status</string>
    <string name="married">Married</string>
    <string name="data">Current Data</string>
    <string name="time">Current Time</string>
    <string name="choose_data">Choose data</string>
    <string name="choose_time">Choose time</string>

    <!--Setting strings-->
    <string name="background">Background color</string>
    <string name="text_color">Text color</string>
    <string name="choose_color">Choose color</string>

    <!--Professional Skills Array String-->
    <string-array name="prof_skills">
        <item>Professional skills:</item>
        <item>1.Experience in developing desktop and Android applications on Java.</item>
        <item>2.Experience in design and development of client-server applications.</item>
        <item>3.Ability to quickly understand someone else code.</item>
        <item>4.Good knowledge of basic design patterns.</item>
        <item>5.A creative approach to the tasks.</item>
        <item>6.Ability and desire to learn new skills and develop new technologies.</item>

    </string-array>

    <!--Text color strings-->
    <string-array name="text_color">
        <item>Black</item>
        <item>Red</item>
        <item>White</item>
    </string-array>

</resources>
