<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="elzhanov.about_me.MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="@dimen/margin_left_size"
            android:background="@color/colorPrimaryLight"
            android:id="@+id/linearLayout">

            <TextView
                    android:textIsSelectable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/portrait_text_large_size"
                    android:textColor="@color/main_txt"
                    android:text="@string/my_name"
                    android:id="@+id/txt_my_name"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="@dimen/portrait_text_small_size"
                    android:textColor="@color/second_txt"
                    android:layout_marginBottom="@dimen/margin_bottom_size"
                    android:text="@string/name"
                    android:id="@+id/txt_name"/>

            <TextView
                    android:textIsSelectable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/portrait_text_large_size"
                    android:textColor="@color/main_txt"
                    android:text="@string/my_sir_name"
                    android:id="@+id/txt_my_sir_name"/>
            <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="@dimen/portrait_text_small_size"
                    android:textColor="@color/second_txt"
                    android:text="@string/sir_name"
                    android:layout_marginBottom="@dimen/margin_bottom_size"
                    android:id="@+id/txt_sir_name"/>

            <TextView
            android:textIsSelectable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/portrait_text_large_size"
            android:textColor="@color/main_txt"
            android:text="@string/my_last_name"
            android:id="@+id/txt_my_last_name"/>
        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/portrait_text_small_size"
                android:textColor="@color/second_txt"
                android:text="@string/last_name"
                android:layout_marginBottom="@dimen/margin_bottom_size"
                android:id="@+id/txt_last_name"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:layout_marginLeft="@dimen/margin_left_size"
            android:background="@color/colorPrimaryLight"
            android:layout_below="@+id/linearLayout"
            android:id="@+id/linearLayout2">
        <TextView
                android:textIsSelectable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/portrait_text_large_size"
                android:textColor="@color/main_txt"
                android:text="@string/_8987_80"
                android:id="@+id/txt_my_phone"/>
        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/portrait_text_small_size"
                android:textColor="@color/second_txt"
                android:text="@string/phone_num"
                android:layout_marginBottom="@dimen/margin_bottom_size"
                android:id="@+id/txt_phone"/>
        <TextView
                android:textIsSelectable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/portrait_text_large_size"
                android:textColor="@color/main_txt"
                android:text="@string/married"
                android:id="@+id/txt_my_status"/>
        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/portrait_text_small_size"
                android:textColor="@color/second_txt"
                android:text="@string/status"
                android:layout_marginBottom="@dimen/margin_bottom_size"
                android:id="@+id/txt_status"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:layout_marginLeft="@dimen/margin_left_size"
            android:background="@color/colorPrimaryLight"
            android:layout_below="@+id/linearLayout2"
            android:id="@+id/linearLayout3">
        <TextView
                android:textIsSelectable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/portrait_text_large_size"
                android:textColor="@color/main_txt"
                android:text="@string/_23_12_1984"
                android:id="@+id/txt_my_birthday"/>
        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/portrait_text_small_size"
                android:textColor="@color/second_txt"
                android:text="@string/date_of_birth"
                android:layout_marginBottom="@dimen/margin_bottom_size"
                android:id="@+id/txt_birthday"/>

        <TextView
                android:textIsSelectable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/portrait_text_large_size"
                android:textColor="@color/main_txt"
                android:text="@string/kazan_technological_univercity"
                android:id="@+id/txt_my_education"/>
        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/portrait_text_small_size"
                android:textColor="@color/second_txt"
                android:text="@string/education"
                android:layout_marginBottom="@dimen/margin_bottom_size"
                android:id="@+id/txt_education"/>
        <TextView
                android:textIsSelectable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/portrait_text_large_size"
                android:textColor="@color/main_txt"
                android:text="@string/martial_arts"
                android:id="@+id/txt_my_hobby"/>
        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/portrait_text_small_size"
                android:textColor="@color/second_txt"
                android:text="@string/hobby"
                android:layout_marginBottom="@dimen/margin_bottom_size"
                android:id="@+id/txt_hobby"/>

            <TextView
                    android:textIsSelectable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/portrait_text_large_size"
                    android:textColor="@color/main_txt"
                    android:text="@string/my_e_mail"
                    android:id="@+id/txt_my_mail"/>
            <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="@dimen/portrait_text_small_size"
                    android:textColor="@color/second_txt"
                    android:text="@string/e_mail"
                    android:id="@+id/txt_mail_address"/>

    </LinearLayout>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_dialog_info"
            android:layout_marginStart="@dimen/margin_size"
            android:layout_marginLeft="@dimen/margin_size"
            android:id="@+id/image_info" android:layout_alignTop="@+id/linearLayout"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_call"
            android:layout_marginStart="@dimen/margin_size"
            android:layout_marginLeft="@dimen/margin_size"
            android:id="@+id/image_phone"
            android:layout_alignTop="@+id/linearLayout2"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_day"
            android:layout_marginStart="@dimen/margin_size"
            android:layout_marginLeft="@dimen/margin_size"
            android:id="@+id/image_day"
            android:layout_alignTop="@+id/linearLayout3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_dialog_email"
            android:layout_marginStart="@dimen/margin_size"
            android:layout_marginLeft="@dimen/margin_size"
            android:id="@+id/image_mail" android:layout_alignBottom="@+id/linearLayout3"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>




</RelativeLayout>
