<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/colorPrimaryLight"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
            android:onClick="showDatePickerDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_data"
            android:background="@drawable/frame"
            android:textColor="@color/white"
            android:padding="@dimen/padding_size"
            android:id="@+id/btn_data"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
    <Button
            android:onClick="showTimePickerDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_time"
            android:background="@drawable/frame"
            android:textColor="@color/white"
            android:padding="@dimen/padding_size"
            android:id="@+id/btn_time"
            android:layout_below="@+id/btn_data"
            android:layout_marginTop="@dimen/margin_size"
            android:layout_centerHorizontal="true"/>
    <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/data"
            android:id="@+id/txt_data"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/time"
            android:id="@+id/txt_time"
            android:layout_below="@+id/txt_data"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>